---------

 * Added database tests for:
    
    * :class:`~stalker.core.models.Review`

    * :class:`~stalker.core.models.Task`

    * :class:`~stalker.core.models.Version`

 * The ``published`` attribute in :class:`~stalker.core.models.Version` is
   renamed to :attr:`~stalker.core.models.Version.is_published`.

 * :class:`~stalker.core.models.Structure` is not ``strictly_typed`` anymore.

v0.1.2.a3
---------

 * stalker.__version__ is fixed for PyPI

v0.1.2.a2
---------

 * All the models are now converted to SQLAlchemy's Declarative.
 
 * Because of the move to the SQLAlchemy Declarative extension the
   stalker.etx.ValidatedList is deprecated. SQLAlchemy is doing (in most of
   the aspects) a much better job.

 * The ``stalker.core.mixins`` module is merged with
   :mod:`~stalker.core.models` module.

 * Becase all the models are declaratively defined and thus they have their
   mappers and tables inside, the ``stalker.db.mapper``, ``stalker.db.tables``
   and the ``stalker.db.mixins`` modules are removed.

 * Added the :class:`~stalker.core.models.Version` class with all its tests.

 * Fixed a couple of test setup for mixins.

 * Fixed :attr:`~stalker.core.models.Project.assets` and
   :attr:`~stalker.core.models.Project.sequences` attributes in
   :class:`~stalker.core.models.Project` class. It is now using the
   ``db.query`` to get the info out of the database, which is much easier than
   setting up a complex relation.

 * Fixed the tests for the database. It is now working properly with the SOM
   which is using SQLAlchemy declarative. There are still missing tests though.

 * The :class:`~stalker.core.models.Project` and
   :class:`~stalker.core.models.Structure` classes are not
   ``__strictly_typed__`` anymore. It was a bump on the road to make them
   strictly typed.

v0.1.2.a1
----------

 * Started to switch to SQLAlchemy ORM Declarative for SOM, implemented these
   classes successfully:
   